<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_corp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/text_sign_welcome"
        android:textColor="@color/text_corp_2"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:drawableTint="@color/fondo_desmarcado"
        android:ems="10"
        android:hint="@string/auth_email_text"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textColor="@color/text_corp_2"
        android:textColorHint="@color/fondo_desmarcado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="186dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/fondo_corp"
        android:backgroundTintMode="add"
        android:shadowColor="@color/fondo_corp"
        android:text="@string/auth_sign_button"
        android:textColor="@color/text_corp_1"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:strokeColor="@color/text_corp_1"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/fondo_desmarcado"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/fondo_desmarcado"
        app:hintTextColor="@color/text_corp_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/fondo_desmarcado">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_input"
            android:hint="@string/auth_password_text"
            android:inputType="textPassword"
            android:textColor="@color/text_corp_2"
            android:textColorHighlight="@color/fondo_desmarcado"
            android:textColorHint="@color/fondo_desmarcado"
            app:hintTextColor="@color/fondo_desmarcado" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberCheckId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/check_text"
        android:textColor="@color/text_corp_1"
        android:textColorHighlight="@color/text_corp_1"
        android:textColorLink="@color/text_corp_1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

</androidx.constraintlayout.widget.ConstraintLayout>